			   XPCE ChangeLog
			   ==============

VERSION 5.1.9, distributed with SWI-Prolog 4.0.10
=================================================

* FIXED: Win32: `Frame<-comfirm' to move/resize already open transient frames.
  Reported by Tolga Konik on the GUI tracer.

* MAINTAIN: Fixed src/FN not to touch the name database it it wasn't changed.

* FIXED: send(file('~/.xpce/Defaults'), exists) to take very long on Windows
  98 and friends: ~/xyz is expanded to c://xyz, which in turn is treated as
  a network path.

* FIXED: `device->erase' to reset the windows focus also the erased graphical
  is a sub-graphical of the focus.  This can cause crashes in applications.

* FIXED: `table_cell->note_mark' for cells in top row or left column.

* FIXED: Colour update in class reporter on ->report: progress, ... 

* FIXED: Focus handling bug opening text_item combobox (for completions).
  Reported by Bob Wielinga.

* FIXED: User cancel of `display<-win_file_name' (used by find_file.pl
  to return a filename on a Windows platform).  Reported by Jelmer
  Jellema.

* FIXED/MODIFIED: `graphical <-{above,below,left,right}' now tell the
  object I'm above, ... rather then *who is* above, ...  This makes
  send(X, below, Y) and get(X, below, Y) behave consistently.  More
  important, we can now destroy a dialog item in the middle of a
  (for example) vertical stack:

  cut(Me) :-
	get(Me, device, Dev),
  	(   get(Me, above, UnderMe),
	    get(Me, below, OverMe),
	    UnderMe \== @nil, OverMe \== @nil
	->  send(Me, destroy),
	    send(UnderMe, below, OverMe)
	;   send(Me, destroy)
	),
	send(Dev, layout_dialog).

  This used not to work for a rather obscure technical reason.  It is
  anticipated there is very few usercode that will be broken by this
  change.

* FIXED: Bug in allocation _debugging_, causing problems on machines
  with signed characters.

* FIXED: Added a few more sanity checks to reading gif files.
